--- a/Sass/homepage.scss
+++ b/Sass/homepage.scss
@@ -31,7 +31,7 @@ body {
 main {
   section {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
   .container {
     max-width: 1200px;
@@ -45,6 +45,7 @@ main {
     height: fit-content;
     .sliderShow-carousel {
       width: 94%;
+      height: auto;
       .category__item {
         position: relative;
         width: 100%;
@@ -101,15 +102,16 @@ main {
           background-color: transparent;
           height: fit-content;
           p {
-            font-size: 15px;
+            font-size: 30px;
             color: #fff;
             background-color: transparent;
             white-space: nowrap;
-            margin-left: 13px;
+            margin-left: 20px;
+            text-transform: uppercase;
           }
         }
         .icon {
-          margin: 10px 0px 0;
+          margin-top: 20px;
           width: 100%;
           flex: 1 0 auto;
           height: 30px;
@@ -212,13 +214,13 @@ main {
   }
   .video-section {
     background-color: var(--background_1);
-    height: 600px;
+    height: 400px;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     .box_video {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -339,12 +341,24 @@ main {
           border-radius: 24px;
           gap: 20px;
           .box__img {
+            width: 170px;
+            height: 170px;
             position: absolute;
+            padding: 10px;
             top: 0;
             transform: translateY(-50%);
-            padding: 3px;
             background-color: var(--background_2);
             border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 50%;
+            }
           }
           .box__content {
             color: var(--colorText_3);
