--- a/Sass/news.scss
+++ b/Sass/news.scss
@@ -318,154 +318,90 @@ main {
       }
     }
   }
-  .mainSystem-section {
+  .location-section {
+    width: 100%;
+    height: auto;
+    background: url("/assets/img/patten-02.png") no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: auto;
     padding: 50px 0 110px;
-    background: var(--background_2);
-    .mainSystem-container {
-      .mainSystem_content {
-        h1 {
-          text-align: center;
-          margin-bottom: 50px;
-          color: var(--colorText_2);
-        }
-      }
-      .box__system {
-        width: 100%;
-        height: auto;
-        display: flex;
+    .location-container {
+      padding: 0 10px;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1200px;
+      height: auto;
+      text-align: center;
+
+      .wrap__dess {
+        box-shadow: 10px 0px 25px rgba(3, 3, 3, 0.2);
         background-color: var(--background_1);
-        border-radius: 20px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         overflow: hidden;
-        h1 {
-          text-align: center;
-        }
-        :not(h1) {
-          flex-direction: row;
-        }
-        .info__nav {
+        border-radius: 10px;
+        color: var(--colorText_1);
+        .wrap__map {
           width: 50%;
-          height: auto;
-          display: flex;
-          flex-wrap: wrap;
-          flex-direction: column;
-          gap: 20px;
-          padding-top: 16px;
-          background-color: var(--background_1);
-          .box__select {
-            padding: 0 10px;
+          height: 100%;
+          .map {
+            width: 100%;
+          }
+        }
+        .wrap__desc {
+          padding: 77px 18px 55px 101px;
+          width: 50%;
+          height: 100%;
+          .box__content {
             width: 100%;
             height: auto;
-            height: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            .box__city,
-            .box__distr {
-              width: 50%;
-              height: auto;
-              select {
-                width: 100%;
-                height: auto;
-                background-color: var(--background_1);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border: 2px solid var(--primaryColor);
-                border-radius: 60px;
-                color: var(--colorText_1);
-                padding: 13px 10px;
-                text-align: center;
-              }
+            h1 {
+              width: 100%;
+              font-size: 40px;
+              margin-bottom: 20px;
+              text-align: start;
             }
           }
-          .result__container__all {
+
+          .box__ress {
             width: 100%;
-            height: 460px;
-            background-color: var(--background_1);
-            padding: 20px;
+            height: auto;
             display: flex;
             flex-direction: column;
-            overflow-y: scroll;
-            gap: 12px;
-            .result__container {
+            .item {
               width: 100%;
-              height: auto;
               display: flex;
-              flex-direction: column;
-              border-radius: 10px;
-              border: solid 1px var(--primaryColor);
-              height: 100%;
-              position: relative;
-              padding: 5px 75px 11px 27px;
-              color: var(--colorText_3);
-              .result__box {
-                display: flex;
-                flex-wrap: wrap;
-                flex-direction: column;
-                position: relative;
-                gap: 10px;
-                width: 100%;
-                height: auto;
-                // height: 25%;
-                // text-align: justify;
-
-                .location {
-                  display: flex;
-                  align-items: center;
-                  gap: 10px;
-                }
-                .phone {
-                  display: flex;
-                  align-items: center;
-                  gap: 10px;
-                }
-                .map__view {
-                  display: flex;
-                  align-items: center;
-                  gap: 10px;
-                  border: solid 1px var(--primaryColor);
-                  border-radius: 60px;
-                  text-align: center;
-                  justify-content: center;
-                  width: 169px;
-                  height: 35px;
-                  color: var(--primaryColor);
-                }
-                .arrow__btn {
-                  position: absolute;
-                  display: flex;
-                  border: solid 1px var(--primaryColor);
-                  width: 40px;
-                  height: 40px;
-                  border-radius: 50%;
-                  align-items: center;
-                  justify-content: center;
-                  right: -60px;
-                  top: 90px;
-                  color: var(--primaryColor);
+              align-items: center;
+              h3 {
+                text-align: start;
+                width: 25%;
+                font-size: 16px;
+                margin-bottom: 20px;
+                line-height: 30px;
+              }
+              .content {
+                max-width: 234px;
+                p {
+                  text-align: justify;
+                  font-size: 14px;
+                  color: #231f20;
+                  margin-bottom: 1.5em;
+                  font-weight: 400;
+                  a {
+                    color: var(--colorText_3);
+                  }
+                  a:hover {
+                    color: var(--colorText_1);
+                    transition: var(--animiation);
+                  }
                 }
               }
             }
-            .result__container:hover {
-              cursor: pointer;
-              box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
-              -webkit-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
-              -moz-box-shadow: 0px 0px 20px -1px rgba(0, 0, 0, 0.63);
-            }
           }
-        }
-        .result__container__all::-webkit-scrollbar {
-          width: 10px;
-        }
-
-        .result__container__all::-webkit-scrollbar-thumb {
-          background: #21937c;
-        }
-        .map {
-          width: 50%;
-          height: auto;
-          background-color: var(--background_1);
         }
       }
     }
@@ -477,56 +413,45 @@ main {
     .container {
       max-width: 960px;
     }
-    .newAndSale__section {
-      .newAndSale__container {
-        .box__heading {
-          width: 100%;
-          height: auto;
-          color: var(--colorText_1);
-          .list__option__scroll {
-            justify-content: start;
-            overflow-x: scroll;
-            .list__option {
-              width: 690px;
-              justify-content: center;
-              margin-bottom: 20px;
-            }
-          }
-          .list__option__scroll::-webkit-scrollbar {
-            height: 10px;
-          }
-
-          .list__option__scroll::-webkit-scrollbar-thumb {
-            background: #21937c;
-          }
-        }
-        .list__news {
-          width: 100%;
-          height: auto;
-          flex-wrap: wrap;
-          .news__box {
-            width: 100%;
-            .text__box {
-              height: 100%;
-              display: flex;
-              align-items: start;
-              justify-content: center;
-              gap: 10px;
-              flex-direction: column;
-              h3 {
-                font-size: 1.5em;
-              }
-              p {
-                font-size: 1.25em;
-              }
-            }
-          }
-        }
-      }
-    }
     .newAndEvent-section {
       .newAnhEvent-container {
         max-width: 824px;
+      }
+    }
+    .location-section {
+      .location-container {
+        max-width: 824px;
+        .wrap__dess {
+          flex-wrap: wrap;
+          .wrap__map {
+            width: 100%;
+          }
+          .wrap__desc {
+            width: 100%;
+            padding: 30px;
+            .box__content {
+              h1 {
+                margin-bottom: 30px;
+                font-size: 25px;
+              }
+            }
+            .box__ress {
+              .item + .item {
+                border-top: 1px solid #bbbbbb;
+              }
+              .item {
+                h3 {
+                  margin-bottom: 10px;
+                }
+                .content {
+                  p {
+                    margin-bottom: 10px;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -545,50 +470,6 @@ main {
     .container {
       max-width: 824px;
     }
-    .newAndSale__section {
-      .newAndSale__container {
-        padding: 0 20px;
-        .box__heading {
-          .heading__h2 {
-            font-size: 30px;
-            .list__option__scroll {
-              .list__option {
-                .option {
-                }
-              }
-            }
-          }
-        }
-        .list__news {
-          flex-wrap: wrap;
-          .news__box {
-            width: 100%;
-            flex-wrap: wrap;
-            .news__img {
-              width: 100%;
-            }
-            .text__box {
-              width: 100%;
-            }
-          }
-        }
-      }
-    }
-    .newAndSale__section {
-      .newAndSale__container {
-        width: 95%;
-        .box__heading {
-          .list__option__scroll {
-            .list__option {
-            }
-          }
-        }
-        .list__news {
-          .news__box {
-          }
-        }
-      }
-    }
     .newAndEvent-section {
       .newAnhEvent-container {
         .grid__container {
@@ -605,31 +486,6 @@ main {
                 height: 200px;
               }
             }
-          }
-        }
-      }
-    }
-    .mainSystem-section {
-      padding: 50px 0 110px;
-      background: var(--background_2);
-      .mainSystem-container {
-        .mainSystem_content {
-          h1 {
-            text-align: center;
-            margin-bottom: 50px;
-            color: var(--colorText_2);
-          }
-        }
-        .box__system {
-          flex-wrap: wrap;
-          height: fit-content;
-          .info__nav {
-            width: 100%;
-          }
-          .map {
-            width: 100%;
-            height: 100%;
-            background-color: var(--background_1);
           }
         }
       }
