--- a/css/homepage.css
+++ b/css/homepage.css
@@ -30,7 +30,7 @@ body p {
 
 main section {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 main .container {
   max-width: 1200px;
@@ -45,6 +45,7 @@ main .sliderShow-section {
 }
 main .sliderShow-section .sliderShow-carousel {
   width: 94%;
+  height: auto;
 }
 main .sliderShow-section .sliderShow-carousel .category__item {
   position: relative;
@@ -100,14 +101,15 @@ main .sliderShow-section .banner__side .nav .box__content {
   height: fit-content;
 }
 main .sliderShow-section .banner__side .nav .box__content p {
-  font-size: 15px;
+  font-size: 30px;
   color: #fff;
   background-color: transparent;
   white-space: nowrap;
-  margin-left: 13px;
+  margin-left: 20px;
+  text-transform: uppercase;
 }
 main .sliderShow-section .banner__side .nav .icon {
-  margin: 10px 0px 0;
+  margin-top: 20px;
   width: 100%;
   flex: 1 0 auto;
   height: 30px;
@@ -207,14 +209,14 @@ main .presentation-section .warp__first {
 }
 main .video-section {
   background-color: var(--background_1);
-  height: 600px;
+  height: 400px;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
 main .video-section .box_video {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -335,11 +337,23 @@ main .thinkAbout__section .thinkAbout__category .slick-track .category__item {
   gap: 20px;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track .category__item .box__img {
+  width: 170px;
+  height: 170px;
   position: absolute;
+  padding: 10px;
   top: 0;
   transform: translateY(-50%);
-  padding: 3px;
   background-color: var(--background_2);
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .thinkAbout__section .thinkAbout__category .slick-track .category__item .box__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 50%;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track .category__item .box__content {
