--- a/Sass/header.scss
+++ b/Sass/header.scss
@@ -86,9 +86,11 @@ li {
             // transition: all 0.4s;
 
             a {
+              flex-grow: 1;
               color: black;
             }
             li {
+              display: flex;
               padding: 20px;
               transition: all 0.4s;
               &:hover {
