--- a/Sass/method.scss
+++ b/Sass/method.scss
@@ -314,7 +314,8 @@ main {
     }
   }
   .schedule-section {
-    padding: 50px 0 140px;
+    background: var(--background_1);
+    padding: 80px 0 140px;
     .schedule-container {
       display: flex;
       align-items: center;
@@ -329,18 +330,19 @@ main {
         }
         .box__content {
           position: absolute;
-          top: 0;
+          top: 35px;
           text-align: center;
           padding: 51px 82px 68px;
-          h3 {
-            font-size: 27px;
-            margin-bottom: 40px;
+          h1 {
+            color: var(--colorText_1);
+            font-size: 30px;
+            margin-bottom: 10px;
           }
 
           .time-text {
-            font-size: 30px;
+            font-size: 20px;
             margin-bottom: 30px;
-            color: #ed1c24;
+            color: var(--colorText_1);
             line-height: 30px;
             font-weight: 700;
           }
@@ -356,9 +358,9 @@ main {
             .item {
               width: calc((100% / 3) - 20px);
               padding: 10px;
-              background: #b11116;
+              background: var(--colorText_3);
               border-radius: 5px;
-              color: #fff;
+              color: var(--colorText_2);
               white-space: nowrap;
               h4 {
                 font-size: 14px;
@@ -371,19 +373,30 @@ main {
               }
             }
             .item:nth-child(1) {
-              background: #ed1c24;
+              background: var(--background_3);
             }
             .item:nth-child(2) {
-              background: #ce181e;
+              background: var(--background_2);
             }
           }
           p {
             font-size: 13px;
+            color: var(--colorText_1);
           }
         }
       }
       .img-side {
+        align-self: stretch;
         width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+          max-width: none;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
@@ -645,15 +658,20 @@ main {
     .schedule-section {
       padding: 50px 0 140px;
       .schedule-container {
-        flex-direction: column;
+        justify-content: center;
         .schedule__side {
-          width: 70%;
-          .box__content {
+          width: 100%;
+          .box__img {
             width: 100%;
-            padding: 71px 43px 55px;
-            h3 {
-              font-size: 25px;
-              margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+          .box__content {
+            max-width: 70%;
+            padding: 60px 50px 55px;
+            h1 {
+              font-size: 40px;
             }
 
             .time-text {
@@ -666,7 +684,7 @@ main {
           }
         }
         .img-side {
-          width: 40%;
+          display: none;
         }
       }
     }
@@ -755,7 +773,6 @@ main {
     }
     .structure-section {
       .structure-container {
-        flex-direction: column;
         .box__content {
           margin: 0;
           width: 100%;
@@ -802,13 +819,14 @@ main {
         flex-direction: column;
         .schedule__side {
           width: 100%;
-          overflow: hidden;
 
           .box__content {
-            padding: 91px 80px 55px;
-            h3 {
-              font-size: 23px;
-              margin-bottom: 20px;
+            max-width: none;
+            width: 100%;
+            padding: 50px 80px 55px;
+            h1 {
+              font-size: 40px;
+              margin-bottom: 10px;
             }
 
             .time-text {
@@ -816,12 +834,7 @@ main {
               margin-bottom: 20px;
               line-height: 1.3;
             }
-            .wrap__dess {
-            }
           }
-        }
-        .img-side {
-          width: 40%;
         }
       }
     }
@@ -853,6 +866,47 @@ main {
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 600px) {
+  main {
+    .schedule-section {
+      .schedule-container {
+        .schedule__side {
+          width: 100%;
+
+          .box__content {
+            max-width: none;
+            width: 100%;
+            padding: 30px 45px 55px;
+            h1 {
+              font-size: 35px;
+              margin-bottom: 10px;
+            }
+
+            .time-text {
+              font-size: 20px;
+              margin-bottom: 20px;
+              line-height: 1.3;
+            }
+            .wrap__dess {
+              flex-wrap: wrap;
+              gap: 10px;
+              margin: 0;
+              .item {
+                width: calc(50% - 20px);
+              }
+            }
+            p {
+              display: none;
+            }
+          }
+        }
+        .img-side {
+          width: 40%;
         }
       }
     }
@@ -893,6 +947,47 @@ main {
               }
             }
           }
+        }
+      }
+    }
+    .schedule-section {
+      .schedule-container {
+        .schedule__side {
+          width: 100%;
+          .box__img {
+            display: none;
+          }
+          .box__content {
+            position: relative;
+            max-width: none;
+            width: 100%;
+            padding: 0;
+            h1 {
+              font-size: 40px;
+              margin-bottom: 10px;
+            }
+
+            .time-text {
+              font-size: 20px;
+              margin-bottom: 20px;
+              line-height: 1.3;
+            }
+            .wrap__dess {
+              flex-wrap: wrap;
+              gap: 10px;
+              margin: 0;
+              .item {
+                width: calc(50% - 20px);
+              }
+            }
+            p {
+              margin-top: 20px;
+              display: block;
+            }
+          }
+        }
+        .img-side {
+          width: 40%;
         }
       }
     }
