--- a/Sass/method.scss
+++ b/Sass/method.scss
@@ -81,15 +81,16 @@ main {
           background-color: transparent;
           height: fit-content;
           p {
-            font-size: 15px;
+            font-size: 20px;
             color: #fff;
             background-color: transparent;
             white-space: nowrap;
-            margin-left: 13px;
+            margin-left: 20px;
+            text-transform: uppercase;
           }
         }
         .icon {
-          margin: 10px 0px 0;
+          margin-top: 20px;
           width: 100%;
           flex: 1 0 auto;
           height: 30px;
