--- a/css/news.css
+++ b/css/news.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
   --animiation: 0.5s ease;
 }
@@ -70,14 +69,15 @@ main .aboutBanner-section .banner__side .nav .box__content {
   height: fit-content;
 }
 main .aboutBanner-section .banner__side .nav .box__content p {
-  font-size: 15px;
+  font-size: 20px;
   color: #fff;
   background-color: transparent;
   white-space: nowrap;
-  margin-left: 13px;
+  margin-left: 20px;
+  text-transform: uppercase;
 }
 main .aboutBanner-section .banner__side .nav .icon {
-  margin: 10px 0px 0;
+  margin-top: 20px;
   width: 100%;
   flex: 1 0 auto;
   height: 30px;
@@ -406,6 +406,9 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .i
 @media only screen and (max-width: 1023px) {
   main .container {
     max-width: 960px;
+  }
+  main .aboutBanner-section .banner__side {
+    display: none;
   }
   main .newAndEvent-section .newAnhEvent-container {
     max-width: 824px;
