--- a/css/recruitment.css
+++ b/css/recruitment.css
@@ -79,14 +79,15 @@ main .banner .banner__side .nav .box__content {
   height: fit-content;
 }
 main .banner .banner__side .nav .box__content p {
-  font-size: 15px;
+  font-size: 20px;
   color: #fff;
   background-color: transparent;
   white-space: nowrap;
-  margin-left: 13px;
+  margin-left: 20px;
+  text-transform: uppercase;
 }
 main .banner .banner__side .nav .icon {
-  margin: 10px 0px 0;
+  margin-top: 20px;
   width: 100%;
   flex: 1 0 auto;
   height: 30px;
